# gradient-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  poetry.toml  pyproject.toml  settings.ini
.tmp/data/training/: vocab.txt
notebooks/models/BERT/: 02_BERT-reimp.ipynb  04_BERT-Prepare-Training-Data.ipynb  06_BERT-Training.ipynb  07_BERT-Infer.ipynb
notebooks/utils/: 00_prop-logic.ipynb  01_plot_utils.ipynb
source_scripts/: _modidx.py
source_scripts/project/models/bert/: model.py  training.py
source_scripts/project/utils/: plot.py  prop_logic.py
